@@ -3,7 +3,7 @@
 <pkgmetadata>
 <herd>net-news</herd>
 <use>
-<flag name='cancel-locks'>Enable CancelLock functionality</flag>
+<flag name='cancel-locks'>Enable Cancel-Lock header functionality (also enables USE=evil)</flag>
 <flag name='evil'>Let tin generate a message ID</flag>
 <flag name='forgery'>Cancel messages posted from a different account</flag>
 <flag name='etiquette'>Enable the display off posting etiquettes</flag>
