@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-nntp/tin/Attic/tin-1.9.4.ebuild,v 1.4 2010/01/09 19:11:02 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-nntp/tin/Attic/tin-1.9.4-r1.ebuild,v 1.1 2010/01/09 19:11:02 jer Exp $
 
 EAPI="2"
 
